--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "morgan": "^1.10.0",
         "node-fetch": "^3.3.2",
         "url": "^0.11.4"
     },
