--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "main": "index.js",
     "scripts": {
         "test": "npm run",
-        "start": "nodemon Express/index.js"
+        "start": "nodemon server.js"
     },
     "author": "zakir matloob",
     "license": "ISC",
